# gpu-kernel-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
benchmarks/: gemm.py
cuda/: CMakeLists.txt  naive_gemm.cu
cute/: README.md
docs/: profiling.md
docs/concepts/: gemm.md  layouts.md
docs/experiments/: _template.md
docs/machines/: README.md
results/: README.md
scripts/: capture_env.py  dump_sass.sh
src/gpu_kernel_lab/: __init__.py  gemm.py  layouts.py
src/gpu_kernel_lab/triton/: __init__.py  naive_gemm.py
tests/: test_gemm.py
