[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-kernel-lab"
version = "0.1.0"
description = "A correctness-first CUDA, CuTE, and Triton kernel learning lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.2"]

[project.optional-dependencies]
triton = ["triton>=2.2; platform_system == 'Linux'"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["gpu: requires a CUDA-capable GPU"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
where = ["src"]

